# To-do-list-

./: .env.example  .gitignore  Dockerfile  README.md  check-prompt.ps1  docker-compose.yml  index.html  llm-job.html  llm-job.js  llm-job.test.js  llm-queue.html  llm-queue.js  llm-queue.ps1  llm-queue.test.js  llm-server.test.js  llm-submit.html  llm-submit.js  llm-submit.test.js  llm.html  llm.js  package-lock.json  package.json  pyproject.toml  requirements.txt  script.js  script.test.js  style.css  submit-prompt.ps1
.github/workflows/: main.yml
apps/api/src/: dependencies.py  main.py
apps/api/src/routes/: hypotheses.py  ingestion.py  projects.py  retrieval.py  uploads.py
apps/web/src/: app.py
apps/web/src/pages/: evidence.py  hypotheses.py  intake.py  uploads.py
apps/web/src/utils/: api_client.py
docs/: architecture.md  pipeline.md
llm-server/: .env.example  package-lock.json  package.json  server.js
scripts/: seed_data.py  setup.sh
tests/: conftest.py  test_hypothesis.py  test_ingestion.py  test_retrieval.py  test_schemas.py
