[project]
name = "ai-research-assistant"
version = "0.1.0"
description = "AI research assistant that helps users go from data to testable hypotheses"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "pypdf2>=3.0.0",
    "pdfplumber>=0.10.0",
    "openpyxl>=3.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "streamlit>=1.29.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "httpx>=0.26.0",
]
ml = [
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests", "packages/*/tests", "apps/*/tests"]
